# whtpst

./: .env  Cargo.toml  Dockerfile  README.md  TODO.md  deny.toml  gptprompts
.github/workflows/: general.yml
config/: base.yaml
scripts/: init_db.bash
src/: config.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/dao/: inmemory.rs  mod.rs  repository.rs
src/domain/: email.rs  mod.rs  new_paste.rs  paste_content.rs  paste_id.rs  paster_email.rs
src/routes/: index.rs  mod.rs  paste.rs
src/routes/paste/: create_paste.rs  create_paste_sans_id.rs  get_paste.rs  mod.rs
static/: index.html
tests/: health_check.rs  health_test.rs  paste_test.rs
tests/utils/: mod.rs
