[package]
name = "gossip"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "gossip"

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.26"
config = "0.11"
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.1", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.5"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1"
validator = "0.14"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
  # Use actix runtime for futures, use rustls as TLS backend
  "runtime-actix-rustls",
  # Gives us access to sqlx::query! and sqlx::query_as!
  "macros",
  # Postgres functionality
  "postgres",
  # SQL UUIDs
  "uuid",
  # SQL timestamptz
  "chrono",
  # sqlx-cli migrations
  "migrate",
  # allow compilation in isolated envs e.g. docker
  "offline"
]

[dev-dependencies]
once_cell = "1.18.0"
claim = "0.5"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.5"
