[package]
name = "whtpst"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "whtpst"

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.26"
config = "0.14"
serde = { version = "1", features = ["derive"] }
serde-aux = "4.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-actix-web = "0.7.10"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1"
validator = "0.18.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
once_cell = "1.18.0"
claims = "0.7.1"
fake = "~2.9"
quickcheck = "1.0"
quickcheck_macros = "1.0.0"
tokio = { version = "1", features = ["macros", "rt"] }
wiremock = "0.6"
rand = "0.8.5"
